1) Added supervisorctl restart to deploy. 2) Changed prompts for DeepSeek and Qwen agents.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,3 +82,9 @@ jobs:
         echo "uv version: $(uv --version)"
         echo "Installed packages:"
         uv pip list | grep -E "token-bowl"
+
+    - name: Restart services
+      run: |
+        echo "Restarting all supervisor services..."
+        supervisorctl restart all
+        echo "✅ Services restarted!"
